[project]
name = "pybites-carbon"
version = "0.2.0"
authors = [{name = "Pybites", email = "info@pybit.es"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.47.0",
    "pyperclip==1.8.2",
    "python-dotenv==0.21.0",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
    "mypy>=1.12.0",
    "pytest-playwright>=0.5.2",
]
